Implement some basic web chat functionality

--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,10 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "react": "^15.3.0",
+    "socket.io-client": "^1.4.8",
+    "ircng": "*",
+    "moment": "^2.14.1"
   }
 }
