Add code coverage

--- a/package.json
+++ b/package.json
@@ -34,13 +34,16 @@
     "grunt-contrib-less": "^1.4.0",
     "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
+    "isparta": "^4.0.0",
     "jasmine": "^2.4.1",
     "jasmine-es6": "^0.2.2",
     "jsdom": "^9.4.2",
     "karma": "^1.2.0",
     "karma-babel-preprocessor": "^6.0.1",
+    "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.1",
+    "karma-sourcemap-loader": "^0.3.7",
     "load-grunt-tasks": "^3.5.0",
     "moment": "^2.14.1",
     "react": "^15.3.0",
