--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Web based IRC",
   "main": "index.js",
   "scripts": {
+    "start": "node server",
     "test": "karma start"
   },
   "repository": {
@@ -13,15 +14,20 @@
   "author": "Stuart Walsh <stu@ipng.org.uk>",
   "license": "MIT",
   "dependencies": {
+    "babel": "^6.5.2",
     "express": "^4.14.0",
+    "http-proxy": "^1.14.0",
     "ircng": "0.0.*",
-    "jade": "^1.11.0"
+    "jade": "^1.11.0",
+    "underscore": "^1.8.3",
+    "webpack-dev-server": "^1.15.1"
   },
   "devDependencies": {
+    "babel-core": "^6.14.0",
     "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
-    "chai": "^3.5.0",
     "eslint": "^3.3.1",
     "eslint-plugin-react": "^6.0.0",
     "grunt": "^1.0.1",
@@ -50,6 +56,7 @@
     "react-addons-test-utils": "^15.3.0",
     "react-dom": "^15.3.0",
     "sinon": "^1.17.5",
-    "socket.io-client": "^1.4.8"
+    "socket.io-client": "^1.4.8",
+    "webpack": "^1.13.2"
   }
 }
