switch to webpack tests because it seems slightly less insane

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "http-proxy": "^1.14.0",
     "ircng": "0.0.*",
     "jade": "^1.11.0",
+    "jquery": "^3.1.0",
     "underscore": "^1.8.3",
     "webpack-dev-server": "^1.15.1"
   },
@@ -26,6 +27,7 @@
     "babel-core": "^6.14.0",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.5",
+    "babel-plugin-istanbul": "^2.0.1",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "eslint": "^3.3.1",
@@ -40,7 +42,7 @@
     "grunt-contrib-less": "^1.4.0",
     "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
-    "isparta": "^4.0.0",
+    "istanbul-instrumenter-loader": "^0.2.0",
     "jasmine": "^2.4.1",
     "jasmine-es6": "^0.2.2",
     "jsdom": "^9.4.2",
@@ -50,6 +52,7 @@
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.1",
     "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.8.0",
     "load-grunt-tasks": "^3.5.0",
     "moment": "^2.14.1",
     "react": "^15.3.0",
