--- a/package.json
+++ b/package.json
@@ -15,23 +15,30 @@
   "license": "MIT",
   "dependencies": {
     "babel": "^6.5.2",
+    "bootstrap": "^3.3.7",
     "express": "^4.14.0",
     "http-proxy": "^1.14.0",
     "ircng": "0.0.*",
-    "jade": "^1.11.0",
     "jquery": "^3.1.0",
+    "pug": "^2.0.0-beta3",
+    "pug-load": "^2.0.3",
     "underscore": "^1.8.3",
-    "webpack-dev-server": "^1.15.1"
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-dev-server": "^1.15.1",
+    "webpack-hot-middleware": "^2.12.2"
   },
   "devDependencies": {
+    "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.14.0",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.5",
     "babel-plugin-istanbul": "^2.0.1",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
+    "css-loader": "^0.25.0",
     "eslint": "^3.3.1",
     "eslint-plugin-react": "^6.0.0",
+    "file-loader": "^0.9.0",
     "grunt": "^1.0.1",
     "grunt-autoprefixer": "^3.0.4",
     "grunt-babel": "^6.0.0",
@@ -53,6 +60,8 @@
     "karma-phantomjs-launcher": "^1.0.1",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.8.0",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "load-grunt-tasks": "^3.5.0",
     "moment": "^2.14.1",
     "react": "^15.3.0",
@@ -60,6 +69,8 @@
     "react-dom": "^15.3.0",
     "sinon": "^1.17.5",
     "socket.io-client": "^1.4.8",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.2"
   }
 }
