--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
   "author": "Stuart Walsh <stu@ipng.org.uk>",
   "license": "MIT",
   "dependencies": {
-    "babel": "^6.5.2",
+    "babel-loader": "^6.2.5",
     "bootstrap": "^3.3.7",
     "express": "^4.14.0",
+    "html-webpack-plugin": "^2.22.0",
     "http-proxy": "^1.14.0",
     "ircng": "0.0.*",
     "jquery": "^3.1.0",
     "pug": "^2.0.0-beta3",
     "pug-load": "^2.0.3",
+    "pug-loader": "^2.3.0",
     "underscore": "^1.8.3",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.15.1",
