--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "css-loader": "^0.25.0",
+    "es6-promise": "^3.2.1",
     "eslint": "^3.3.1",
     "eslint-plugin-react": "^6.0.0",
     "file-loader": "^0.9.0",
